lib/src/compiler/tests/testdata/errors/63.out
error[E001]: syntax error
 --> line:2:5
  |
2 |     true }
  |     ^^^^ expecting `meta`, `strings` or `condition`, found `true`
  |